create nn folder for neural network development. Layer class is abstract base class of all NN layers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,14 @@ set(LINALG_SOURCES
     src/linalg/Operations.cpp
 )
 
+set(NN_SOURCES
+    src/nn/Layer.cpp
+)
+
 # Combine all source files
 set(SOURCES
     ${LINALG_SOURCES}
+    ${NN_SOURCES}
 )
 
 set(MAIN_SOURCES
